# async-graphql-salvo

./: .gitignore  Cargo.toml  README.md
examples/salvo-graphql-example/: Cargo.toml
examples/salvo-graphql-example/src/: main.rs
examples/salvo-graphql-example/src/books/: mod.rs
src/: lib.rs  multipart.rs  request.rs  subscription.rs
