[package]
name = "salvo-graphql-example"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.84", features = ["websocket"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-graphql-salvo = { path = "../..", features = ["websocket"] }
async-graphql = "7.0.17"
tokio-stream = "*"

slab = "0.4.11"
once_cell = "1.21.3"
futures-util = "0.3.31"
futures-timer = "3.0.3"
futures-channel = "0.3.31"